Update spelletjespagina met lokale plaatjes en nieuwe spelletjes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <header>
         <h1>Hoi, ik ben Isajah!</h1>
         <p>Welkom op mijn website. Ik ben 9 jaar en ik hou van programmeren en nieuwe dingen leren.</p>
+        <nav class="main-nav">
+            <a href="index.html">Home</a>
+            <a href="spelletjes.html">Spelletjes</a>
+        </nav>
     </header>
     <main>
         <section>
