Voeg Snake-spel toe en link op spelletjespagina

--- a/spelletjes.html
+++ b/spelletjes.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Spelletjes van Isajah</h1>
+        <h1>Websites van Isajah</h1>
         <p>Hier kun je leuke spelletjes spelen die ik heb gemaakt of verzameld!</p>
         <nav class="main-nav">
             <a href="index.html">Home</a>
@@ -38,6 +38,18 @@
                 <div class="game-card">
                     <img src="plaatjes/2048.png" alt="2048.nl logo" class="game-img">
                     <a class="game-button" href="https://www.2048.nl/" target="_blank">Speel op 2048.nl</a>
+                </div>
+                <div class="game-card">
+                    <img src="plaatjes/sommenoefenen.png" alt="Sommenoefenen.nl logo" class="game-img">
+                    <a class="game-button" href="https://www.sommenoefenen.nl/" target="_blank">Speel op Sommenoefenen.nl</a>
+                </div>
+                <div class="game-card">
+                    <img src="https://slopeio.org/favicon.ico" alt="Slope.io logo" class="game-img" onerror="this.onerror=null;this.src='https://slopeio.org/favicon.ico';">
+                    <a class="game-button" href="https://slopeio.org/" target="_blank">Speel op Slope.io</a>
+                </div>
+                <div class="game-card">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Classic_snake_game_icon.png" alt="Snake logo" class="game-img">
+                    <a class="game-button" href="snake.html">Speel Snake</a>
                 </div>
                 <p>Er staan nog geen eigen spelletjes op, maar binnenkort kun je hier mijn games spelen!</p>
             </div>
