--- a/snake.html
+++ b/snake.html
@@ -119,6 +119,28 @@
             if(e.key === 'ArrowRight' && direction !== 'LEFT') direction = 'RIGHT';
             if(e.key === 'ArrowDown' && direction !== 'UP') direction = 'DOWN';
         });
+        // Touch controls voor mobiel
+        let touchStartX = null, touchStartY = null;
+        canvas.addEventListener('touchstart', function(e) {
+            if(e.touches.length === 1) {
+                touchStartX = e.touches[0].clientX;
+                touchStartY = e.touches[0].clientY;
+            }
+        });
+        canvas.addEventListener('touchmove', function(e) {
+            if(touchStartX === null || touchStartY === null) return;
+            let dx = e.touches[0].clientX - touchStartX;
+            let dy = e.touches[0].clientY - touchStartY;
+            if(Math.abs(dx) > Math.abs(dy)) {
+                if(dx > 20 && direction !== 'LEFT') direction = 'RIGHT';
+                else if(dx < -20 && direction !== 'RIGHT') direction = 'LEFT';
+            } else {
+                if(dy > 20 && direction !== 'UP') direction = 'DOWN';
+                else if(dy < -20 && direction !== 'DOWN') direction = 'UP';
+            }
+            touchStartX = null;
+            touchStartY = null;
+        });
         function gameLoop() {
             moveSnake();
             draw();
